Fixed layout bug with comments list mode selector

--- a/www/style-less.linux.css
+++ b/www/style-less.linux.css
@@ -1575,6 +1575,8 @@ div.comment-child-links a::first-letter {
 	grid-column: 1;
 	position: unset;
 	z-index: 1;
+	justify-self: start;
+	align-self: start;
 }
 #comments-list-mode-selector button {
 	color: transparent;
@@ -5267,7 +5269,6 @@ div.comment-child-links a::first-letter {
 /*=======================*/
 
 #comments-list-mode-selector {
-	display: inline-block;
 	opacity: 0.4;
 	transition: opacity 0.15s ease;
 }
